[project]
name = "test"
version = "0.1.0"
description = "Fetch research papers from PubMed based on user queries."
authors = [
    {name = "Spoorthi Shetter"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.12.6"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
